PHP 8.2 fixes https://github.com/FrontAccountingERP/FA/commit/24fb0a10f96e0ffba9b877c662ae2bf9dc79256b https://github.com/FrontAccountingERP/FA/commit/3aada292902adb788119da40db39f437fcfc7654 https://github.com/FrontAccountingERP/FA/commit/00f413f12b0635864222dbcce4f82d98351b08cf https://github.com/FrontAccountingERP/FA/commit/7ad222595e84451daea8aaa06c83d817cc3c774c https://frontaccounting.com/punbb/viewtopic.php?id=10340

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,17 @@
+2023-08-07/08 Joe Hunt
+PHP 8.2 fixes - 4 commits
+M	admin\includes\fa_patch.class.inc
+M	includes\hooks.inc
+M	includes\prefs\userprefs.inc
+M	includes\ui\allocation_cart.inc
+M	includes\ui\attachment.inc
+M	includes\ui\contacts_view.inc
+M	purchasing\inquiry\supplier_inquiry.php
+M	reporting\rep110.php
+M	reporting\includes\class.graphic.inc
+M	sales\includes\cart_class.inc
+M	sales\inquiry\customer_inquiry.php
+
 2023-08-01/06 Joe Hunt
 Added Payment Link (Payment Service) for XUMM. A Dutch free Payment Service and re-run
 M	includes/ui/ui_view.inc
