New empty language empty.po file https://github.com/FrontAccountingERP/FA/commit/d63ba7b7819e07a73cd1999cec249fc6f0b009fb
Two new language strings
Could not retrieve %s bank account number
Could not retrieve exchange rate for %s - %s

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-09-21 Joe Hunt
+New empty language empty.po file
+M	lang/new_language_template/LC_MESSAGES/empty.po
+
 2023-08-07/08 Joe Hunt
 PHP 8.2 fixes - 4 commits
 M	admin\includes\fa_patch.class.inc
