Bug Found in Supplier Invoice in Calculating Unit Tax https://github.com/FrontAccountingERP/FA/commit/59a3056986e176bf155f26366de3c5ec6b4bcb6b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-09-22 Joe Hunt
+Bug Found in Supplier Invoice in Calculating Unit Tax
+M	purchasing/includes/db/invoice_db.inc
+
 2023-09-21 Joe Hunt
 New empty language empty.po file
 M	lang/new_language_template/LC_MESSAGES/empty.po
