--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2023-10-21 Joe Hunt
+Bug 5722: Canceled Sales Orders Show Up In Sales Order Inquiry. Fixed.
+M	sales/includes/db/cust_trans_db.inc
+M	sales/includes/db/sales_order_db.inc
+M	sales/inquiry/sales_orders_view.php
+
 2023-10-10 Joe Hunt
 Release 2.4.17
 M	version.php
