Customer Transaction Inquiry on Reference (partly) fixed. https://github.com/FrontAccountingERP/FA/commit/0f465ad5e73c6683a5102bde63821a6f6a1c3f3a Ref field now added

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2023-10-21 Joe Hunt
+Customer Transaction Inquiry on Reference (partly) fixed.
+M	sales/inquiry/customer_inquiry.php
+
+2023-10-21 Joe Hunt
 Bug 5722: Canceled Sales Orders Show Up In Sales Order Inquiry. Fixed.
 M	sales/includes/db/cust_trans_db.inc
 M	sales/includes/db/sales_order_db.inc
