--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,14 @@
+2023-10-24 Joe Hunt
+Implemented Bank Account Attachments with tabs with re-run
+M	admin/attachments.php
+M	admin/db/attachments_db.inc
+M	admin/db/transactions_db.inc
+M	gl/inquiry/bank_inquiry.php
+M	gl/manage/bank_accounts.php
+M	includes/sysnames.inc
+M	includes/types.inc
+M	includes/ui/attachment.inc
+
 2023-10-21 Joe Hunt
 Customer Transaction Inquiry on Reference (partly) fixed.
 M	sales/inquiry/customer_inquiry.php
