Bug 5711: Bad Content-type set for invoice mail attachment - malformed invoice mails sent from Win based FA servers. Fixed. PHP short array syntax fixed in rerun. https://github.com/FrontAccountingERP/FA/commit/0b44975d1b3c8f3e3fb28d24d8b45b1a6f71d12c https://github.com/FrontAccountingERP/FA/commit/5d023098e6b5a31416949f00c66ffa28ed3cb589 https://frontaccounting.com/punbb/viewtopic.php?pid=42651#p42651

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-11-01 Janusz Dobrowolski
+Bug 5711: Bad Content-type set for invoice mail attachment - malformed invoice mails sent from Win based FA servers. Fixed. PHP short array syntax fixed in rerun.
+M	reporting/includes/class.mail.inc
+
 2023-10-24 Joe Hunt
 Implemented Bank Account Attachments with tabs with re-run
 M	admin/attachments.php
