Better sql construct in function last_sales_order_detail() moved from FA24Mods https://sourceforge.net/p/frontaccounting/git/ci/6c40a3be4a79826087d7abbdd11b483f19decc2a/tree/sales/includes/db/sales_order_db.inc?diff=0b44975d1b3c8f3e3fb28d24d8b45b1a6f71d12c&diformat=sidebyside https://frontaccounting.com/punbb/viewtopic.php?pid=42694#p42694

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2023-11-15 Joe Hunt
+Better sql construct in function last_sales_order_detail() moved from FA24Mods
+M	sales/includes/db/sales_order_db.inc
+
 2023-11-01 Janusz Dobrowolski
 Bug 5711: Bad Content-type set for invoice mail attachment - malformed invoice mails sent from Win based FA servers. Fixed. PHP short array syntax fixed in rerun.
 M	reporting/includes/class.mail.inc
