Fixed language modules locale.inc integration. https://sourceforge.net/p/frontaccounting/git/ci/331673104c056da093f60cde57d731371fbdc6ee/tree/includes/hooks.inc?diff=ad18b139db8bf7550225bb670bc83c920a97c8a3 https://github.com/FrontAccountingERP/FA/commit/331673104c056da093f60cde57d731371fbdc6ee

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2024-03-15 Janusz Dobrowolski
+Fixed language modules locale.inc integration.
+M	 includes/hooks.inc
+
 2024-01-18 Joe Hunt
 Fixed more php 8.2 deprecation bugs.
 M	frontaccounting.php
