Bug 5735: Problems with sending emails with encoding other than ASCII - fixed. https://github.com/FrontAccountingERP/FA/commit/0cbe5791fbc7f09ab9dda6b92d1ae27e61d26953 https://github.com/FrontAccountingERP/FA/commit/a67b9dfc9f6932d5fe64ae21758f86bdb9250df2

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,12 @@
 2024-03-15 Janusz Dobrowolski
+Bug 5735: Problems with sending emails with encoding other than ASCII - fixed. PHP 8.2 fix also.
+M	inventory/includes/inventory_db.inc
+M	reporting/includes/class.mail.inc
+M	reporting/includes/pdf_report.inc
+M	reporting/rep107.php
+M	reporting/rep108.php
+
+2024-03-15 Janusz Dobrowolski
 Fixed language modules locale.inc integration.
 M	 includes/hooks.inc
 
