--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2024-03-15 Joe Hunt
+Bug. Edit Journal -> orphaned attachments.
+M	gl/includes/db/gl_journal.inc
+
 2024-03-15 Janusz Dobrowolski
 Bug 5735: Problems with sending emails with encoding other than ASCII - fixed. PHP 8.2 fix also.
 M	inventory/includes/inventory_db.inc
