Wrong default function parameters in display_type. Fixed. https://github.com/FrontAccountingERP/FA/commit/534d4b6a6b5e771f3b61e0fc65afd856760a6408 https://frontaccounting.com/punbb/viewtopic.php?pid=42980#p42980

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2024-03-29 Joe Hunt
+Wrong default function parameters in display_type. Fixed.
+M	gl/inquiry/profit_loss.php
+
 2024-03-15 Joe Hunt
 Bug. Edit Journal -> orphaned attachments.
 M	gl/includes/db/gl_journal.inc
