Wrong implicit conversion fixed from double to int. https://github.com/FrontAccountingERP/FA/commit/ce5f33c17196c1f32e05576da2fd9719db60c596 https://frontaccounting.com/punbb/viewtopic.php?pid=42911#p42911

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2024-03-29 Joe Hunt
+Wrong implicit conversion fixed from double to int.
+M	inventory/manage/items.php
+
+2024-03-29 Joe Hunt
 Wrong default function parameters in display_type. Fixed.
 M	gl/inquiry/profit_loss.php
 
