--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2024-04-03 Joe Hunt
+Release 2.4.18
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	version.php
+
 2024-03-29 Joe Hunt
 Wrong implicit conversion fixed from double to int.
 M	inventory/manage/items.php
