--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2024-04-26 Joe Hunt
+New feature. Copy Delivery/Invoice from Customer Transactions Inquiry.
+M	lang/new_language_template/LC_MESSAGES/empty.po
+M	sales/inquiry/customer_inquiry.php
+
 2024-04-03 Joe Hunt
 Release 2.4.18
 M	lang/new_language_template/LC_MESSAGES/empty.po
