--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,12 @@
+2024-05-14 Joe Hunt
+Bug 5740 Prepaid options for SO
+M	sales/sales_order_entry.php
+
+2024-05-13 Joe Hunt
+Bug 5738 Addl Search Options for SO
+M	sales/includes/db/sales_order_db.inc
+M	sales/inquiry/sales_orders_view.php
+
 2024-05-16 Joe Hunt
 PHP 8 fix for number format and rerun
 M	includes/current_user.inc
