--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2024-05-15 Joe Hunt
+Whitespace tab synched
+M	sales/includes/ui/sales_credit_ui.inc	
+
 2024-05-14 Joe Hunt
 Bug 5740 Prepaid options for SO
 M	sales/sales_order_entry.php
