PHP 8 fix for number format and rerun, whitespace fix https://github.com/FrontAccountingERP/FA/commit/114e0e3e05c4633f27662c6d19c12407f4696d45 https://github.com/FrontAccountingERP/FA/commit/c9e583926a7283fd099ccfda650715de1f66ff2b https://github.com/FrontAccountingERP/FA/commit/bca406d61d1f94c5dcefdbad041b3e0bf77a2919

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,11 @@
+2024-05-16 Joe Hunt
+PHP 8 fix for number format and rerun
+M	includes/current_user.inc
+
+2024-05-15 Joe Hunt
+Whitespace tab fix
+M	sales/includes/ui/sales_credit_ui.inc	
+
 2024-04-26 Joe Hunt
 New feature. Copy Delivery/Invoice from Customer Transactions Inquiry.
 M	lang/new_language_template/LC_MESSAGES/empty.po
