Bug 5748: Voiding location transfer results in an increased material cost. Fixed. https://github.com/FrontAccountingERP/FA/commit/b75f8a360696ee42c64beb90fa86f8603bada76e https://mantis.frontaccounting.com/view.php?id=5748

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2025-04-07 Joe Hunt
+Bug 5748: Voiding location transfer results in an increased material cost. Fixed.
+M	includes/db/inventory_db.inc
+
 2025-01-12 Joe Hunt
 Spacing adjustment for rep705.php
 M	reporting/rep705.php
