Fixed deprecation warning logged when sysprefs object is created on php >=8.2. https://github.com/FrontAccountingERP/FA/commit/4e629d61bbf3c807102f80a163b24346dcd41efe

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2025-05-11 Joe Hunt
+Fixed deprecation warning logged when sysprefs object is created on php >=8.2.
+M	includes/prefs/sysprefs.inc
+
+2025-05-11 Joe Hunt
 Fixed deprecation warning when user error is triggered on php >=8.4
 M	includes/JsHttpRequest.php
 M	includes/errors.inc
