Bug 5753: The company logo $padding must be inside TCPDF class declaration. https://github.com/FrontAccountingERP/FA/commit/f235666b297a08a7ac807d8dc5f765d1a7c3ab5b https://frontaccounting.com/punbb/viewtopic.php?pid=43764#p43764

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2025-10-07 Joe Hunt
+Bug 5753: The company logo $padding must be inside TCPDF class declaration.
+M	reporting/includes/tcpdf.php
+
 2025-05-11 Joe Hunt
 Fixed deprecation warning logged when sysprefs object is created on php >=8.2.
 M	includes/prefs/sysprefs.inc
